# University

./: CMakeLists.txt  Teacher.cpp  Teacher.h  University.docx  demo.cpp  gitignore.gitignore  group.cpp  group.h  student.cpp  student.h  subject.cpp  subject.h  test.cpp
